force-app/main/default/objects/SAAS_To_SAAS__c/SAAS_To_SAAS__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to store mapping for Replacement SKU&apos;s</description>
    <label>SAAS To SAAS Mapping</label>
    <nameField>
        <label>SAAS To SAAS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAAS To SAAS Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>