force-app/main/default/objects/SAAS_To_SAAS__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates mappings for replacement that are active and available</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>