force-app/main/default/objects/SAAS_To_SAAS__c/fields/Additional_Days__c.field-meta.xml
<CustomField>
    <fullName>Additional_Days__c</fullName>
    <label>Additional Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>