force-app/main/default/objects/SAAS_To_SAAS__c/fields/Asset_Based_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Asset_Based_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Based Conversion?</label>
    <type>Checkbox</type>
</CustomField>