force-app/main/default/objects/SAAS_To_SAAS__c/fields/Edbo__c.field-meta.xml
<CustomField>
    <fullName>Edbo__c</fullName>
    <label>End Date Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-term Date</fullName>
            </value>
            <value>
                <fullName>Replacing Entitlement’s Enddate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>