force-app/main/default/objects/SAAS_To_SAAS__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SAAS To SAAS Mappings</relationshipLabel>
    <relationshipName>From</relationshipName>
    <type>Lookup</type>
</CustomField>