force-app/main/default/objects/SAAS_To_SAAS__c/fields/FromVsTo__c.field-meta.xml
<CustomField>
    <fullName>FromVsTo__c</fullName>
    <formula>From__r.ProductCode &amp; &quot; =&gt; &quot; &amp; To__r.ProductCode</formula>
    <label>FromVsTo</label>
    <type>Text</type>
</CustomField>