force-app/main/default/objects/SAAS_To_SAAS__c/fields/IAR__c.field-meta.xml
<CustomField>
    <fullName>IAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LOD-RSCG for Ironclad Automation Required stamping on Quote and Opportunity.RGCF2-66</description>
    <label>Ironclad Automation Required</label>
    <type>Checkbox</type>
</CustomField>