force-app/main/default/objects/SAAS_To_SAAS__c/fields/Is_EDNE__c.field-meta.xml
<CustomField>
    <fullName>Is_EDNE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is EndDate Non-Editable</label>
    <type>Checkbox</type>
</CustomField>