force-app/main/default/objects/SAAS_To_SAAS__c/fields/No_Merge__c.field-meta.xml
<CustomField>
    <fullName>No_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Merge</label>
    <type>Checkbox</type>
</CustomField>