force-app/main/default/objects/SAAS_To_SAAS__c/fields/RenLater__c.field-meta.xml
<CustomField>
    <fullName>RenLater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HW / SW Renew Later</label>
    <type>Checkbox</type>
</CustomField>