force-app/main/default/objects/SAAS_To_SAAS__c/fields/Section_Category__c.field-meta.xml
<CustomField>
    <fullName>Section_Category__c</fullName>
    <description>Created to optimise the filter category of quotelines CPQ22-3680</description>
    <label>Section Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS replacement</fullName>
            </value>
            <value>
                <fullName>Go to Scale replacement</fullName>
            </value>
            <value>
                <fullName>RSC to RSC-G</fullName>
            </value>
            <value>
                <fullName>SAAS-SAAS-G</fullName>
            </value>
            <value>
                <fullName>LOD-RSC-G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>