force-app/main/default/objects/SAAS_To_SAAS__c/fields/Starting_Point__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point__c</fullName>
    <label>Starting Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote Creation Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>