force-app/main/default/objects/SAAS_To_SAAS__c/fields/Storage_Tier__c.field-meta.xml
<CustomField>
    <fullName>Storage_Tier__c</fullName>
    <label>Storage Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Storage_Tier</valueSetName>
    </valueSet>
</CustomField>