force-app/main/default/objects/SAAS_To_SAAS__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SAAS To SAAS Mappings (To)</relationshipLabel>
    <relationshipName>To</relationshipName>
    <type>Lookup</type>
</CustomField>