force-app/main/default/objects/SAAS_To_SAAS__c/fields/Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Percent__c</fullName>
    <label>Uplift Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>