force-app/main/default/objects/SAAS_To_SAAS__c/listViews/ALLSaasMapping.listView-meta.xml
<ListView>
    <fullName>ALLSaasMapping</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Asset_Based_Conversion__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>